Form button adjustment to prevent word wrapping. Added new page for amend business prototype

--- a/assets/sass/capd/_forms.scss
+++ b/assets/sass/capd/_forms.scss
@@ -84,6 +84,7 @@
   .button {
     margin: 0 0 0 15px;
     line-height: 1em;
+    white-space: nowrap;
   }
 
 }
